JDK 17 / Spring Boot 3 Upgrade (#157)
* #154 : Update docs, Dockefile, run scripts, and GitHub CI for JDK 17

* #154 : Disable Gradle CI build for now

* #154 : Disable PowerMock tests for now - need fixing

* #154 : Disable IT tests for now - need fixing

* #154 : Add tmp Gradle coverage exclude

* #154 : Upgrade maven build to 3.9.1 + FIXME reminders

* #154 : Upgrade maven build to 3.9.1 - include files

* #154 : Upgrade Gradle build to 7.6.1

* #154 : Started updating Maven build test deps

* #154 : Updated Maven build plugins

* #154 : Fixed a load of Javadoc warnings

* #154 : Fixed even more Javadoc warnings...

* #154 : Fixed Gradle build failure

* #154 : Yet more Javadoc warnings...

* #154 : Hopefully the last lot of fixes for Javadoc warnings!

* #154 : A few more javadoc fixes

* #154 : Last javadoc fixes

* #154 : Upgrade maven build non Spring Boot deps

* #154 : Fix Gradle build

* #154 : Upgrade maven build to use latest jjwt libs

* #154 : Upgrade maven build to use Spring Boot 3.0.5

* Includes some fun updates for Spring Security 6 in REST API.
* Also fixed Jakarta validation deps + usage

* #154 : Removed JAXB impl from maven build - already comes bundled now. Only need the API.

* #154 : Upgraded Gradle build to use latest deps

* #154 : Fixed bunch of sonar whines

* Also added swagger ui dep to missing modules for Schema annotations.

* #154 : Patch bxbot-repository Powermock tests for maven

* See https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17

* #154 : Patch bxbot-exchange Powermock unit tests for maven

* See https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17

* #154 : Patch bxbot-exchange Powermock IT tests for maven

* See https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17

* #154 : Patch bxbot-exchange Powermock IT tests for maven

* See https://stackoverflow.com/questions/69896