@@ -6,15 +6,15 @@ buildscript {
     }
 
     dependencies {
-        classpath('io.spring.gradle:dependency-management-plugin:1.0.13.RELEASE')
-        classpath('org.springframework.boot:spring-boot-gradle-plugin:2.7.2')
+        classpath('io.spring.gradle:dependency-management-plugin:1.1.0')
+        classpath('org.springframework.boot:spring-boot-gradle-plugin:3.0.6')
     }
 }
 
 plugins {
-    id 'org.sonarqube' version '3.4.0.2513'
+    id 'org.sonarqube' version '4.0.0.2929' // https://plugins.gradle.org/plugin/org.sonarqube
     id 'jacoco'
-    id 'com.github.spotbugs' version '5.0.9'
+    id 'com.github.spotbugs' version '5.0.14' // https://plugins.gradle.org/plugin/com.github.spotbugs
 }
 
 buildScan {
@@ -23,17 +23,15 @@ buildScan {
 }
 
 ext.versions = [
-        springBootVersion        : '2.7.2',
-        springCloudVersion       : '3.1.3',
+        springBootVersion        : '3.0.6',
+        springCloudVersion       : '4.0.2',
 
         // Should be same as dependency used by springBootVersion
-        springCoreVersion        : '5.3.22',
+        springCoreVersion        : '6.0.8',
 
-        springdocOpenapiVersion  : '1.6.10',
-        hibernateVaildatorVersion: '7.0.5.Final',
-        jaxbVersion              : '2.3.1',
-        javaxMailVersion         : '1.6.2',
-        spotBugsVersion          : '4.7.1'
+        hibernateVaildatorVersion: '8.0.0.Final',
+        spotbugsToolVersion      : '4.7.3', // https://plugins.gradle.org/plugin/com.github.spotbugs
+        jjwtVersion              : '0.11.5'
 ]
 
 ext.libraries = [
@@ -60,34 +58,39 @@ ext.libraries = [
             exclude module: "spring-boot-starter-logging"
         },
         spring_tx                               : dependencies.create("org.springframework:spring-tx:" + ext.versions.springCoreVersion),
-        jjwt                                    : dependencies.create("io.jsonwebtoken:jjwt:0.9.1"),
+
+        jjwt_api                                : dependencies.create("io.jsonwebtoken:jjwt-api:" + ext.versions.jjwtVersion),
+        jjwt_impl                               : dependencies.create("io.jsonwebtoken:jjwt-impl:" + ext.versions.jjwtVersion),
+        jjwt_jackson                            : dependencies.create("io.jsonwebtoken:jjwt-jackson:" + ext.versions.jjwtVersion),
+
         google_guava                            : dependencies.create("com.google.guava:guava:31.1-jre"),
-        google_gson                             : dependencies.create("com.google.code.gson:gson:2.9.1"),
+        google_gson                             : dependencies.create("com.google.code.gson:gson:2.10.1"),
         h2                                      : dependencies.create("com.h2database:h2:2.1.214"),
-        javax_mail_api                          : dependencies.create("javax.mail:javax.mail-api:" + ext.versions.javaxMailVersion),
-        javax_mail_sun                          : dependencies.create("com.sun.mail:javax.mail:" + ext.versions.javaxMailVersion),
-        javax_xml_api                           : dependencies.create("javax.xml.bind:jaxb-api:" + ext.versions.jaxbVersion),
-        javax_xml_impl                          : dependencies.create("com.sun.xml.bind:jaxb-impl:" + ext.versions.jaxbVersion),
-        snake_yaml                              : dependencies.create("org.yaml:snakeyaml:1.30"),
 
-        springdoc_openapi_ui                    : dependencies.create("org.springdoc:springdoc-openapi-ui:" + ext.versions.springdocOpenapiVersion),
-        springdoc_openapi_security              : dependencies.create("org.springdoc:springdoc-openapi-security:" + ext.versions.springdocOpenapiVersion),
+        jakarta_mail_api                        : dependencies.create("jakarta.mail:jakarta.mail-api:2.1.1"),
+        jakarta_mail_sun                        : dependencies.create("org.eclipse.angus:angus-mail:2.0.1"),
 
-        validation_api                          : dependencies.create("javax.validation:validation-api:2.0.1.Final"),
+        jakarta_xml_api                         : dependencies.create("javax.xml.bind:jaxb-api:2.4.0-b180830.0359"),
+
+        snake_yaml                              : dependencies.create("org.yaml:snakeyaml:1.33"),
+
+        springdoc_openapi_ui                    : dependencies.create("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0"),
+
+        validation_api                          : dependencies.create("jakarta.validation:jakarta.validation-api:3.0.2"),
         hibernate_validator                     : dependencies.create("org.hibernate.validator:hibernate-validator:" + ext.versions.hibernateVaildatorVersion),
         hibernate_validator_annotation_processor: dependencies.create("org.hibernate.validator:hibernate-validator-annotation-processor:" + ext.versions.hibernateVaildatorVersion),
 
         powermock_junit                         : dependencies.create("org.powermock:powermock-module-junit4:2.0.9"),
         powermock_api_easymock                  : dependencies.create("org.powermock:powermock-api-easymock:2.0.9"),
-        easymock                                : dependencies.create("org.easymock:easymock:4.3"),
+        easymock                                : dependencies.create("org.easymock:easymock:5.1.0"),
 
         // JUnit 4 still as Powermock does not play with Junit 5: https://github.com/powermock/powermock/issues/929
-        junit_vintage_engine                    : dependencies.create("org.junit.vintage:junit-vintage-engine:5.9.0"),
+        junit_vintage_engine                    : dependencies.create("org.junit.vintage:junit-vintage-engine:5.9.2"),
 
         spring_boot_starter_test                : dependencies.create("org.springframework.boot:spring-boot-starter-test:" + ext.versions.springBootVersion) {
             exclude module: "spring-boot-starter-logging"
         },
-        spring_security_test                    : dependencies.create("org.springframework.security:spring-security-test:5.7.3"),
+        spring_security_test                    : dependencies.create("org.springframework.security:spring-security-test:6.0.2"),
         awaitility                              : dependencies.create("org.awaitility:awaitility:4.2.0")
 ]
 
@@ -113,8 +116,8 @@ subprojects {
 
     apply plugin: 'java'
 
-    sourceCompatibility = 1.11
-    targetCompatibility = 1.11
+    sourceCompatibility = 1.17
+    targetCompatibility = 1.17
 
     repositories {
         mavenCentral()
@@ -131,7 +134,8 @@ subprojects {
     }
 
     checkstyle {
-        toolVersion '8.21'
+        toolVersion '8.23'
+        // https://stackoverflow.com/questions/47715303/how-to-find-which-checkstyle-version-gradle-is-using
         configFile = file("${rootDir}/etc/google_checks.xml")
         ignoreFailures = false
         showViolations = true
@@ -145,8 +149,26 @@ subprojects {
         source = 'src/test/java'
     }
 
+    // See: https://stackoverflow.com/questions/69896191/powermock-compatibility-with-jdk-17
+    test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.text=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.nio.file=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.math=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.time=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.security=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/java.net=ALL-UNNAMED"
+    test.jvmArgs "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
+    test.jvmArgs "--add-exports", "java.base/sun.net.www.protocol.https=ALL-UNNAMED"
+
     jacoco {
-        toolVersion = "0.8.7"
+        toolVersion = "0.8.8" // https://docs.gradle.org/current/userguide/jacoco_plugin.html
     }
     jacocoTestReport {
         reports {
@@ -192,7 +214,7 @@ task buildZipDist(type: Zip) {
     archiveBaseName = 'bxbot-app'
     archiveExtension = 'zip'
 
-    into ("bxbot-app-$project.version") {
+    into("bxbot-app-$project.version") {
 
         into('libs') {
             from 'bxbot-app/build/libs'
